# raspberry-pi-notes

./: .gitignore  .pre-commit-config.yaml  .yaml  1. Dealing with missing data.ipynb  2. Data exploration.ipynb  4. Visualising loss as params scale.ipynb  6. Convert to tf-lite.ipynb  6. Data problems.ipynb  7. Add params to model.ipynb  7. Productionise.ipynb  Dockerfile  Makefile  README.md  all_time.csv  analysis.ipynb  application.py  blah.csv  collect-and-upload-ddb.py  collect_and_upload_ddb.py  collect_and_upload_ddb_once.py  collect_and_upload_s3.py  collect_temp_data.py  ddb_query.py  download_temp_data.py  last_day.csv  pi_to_aws.py  pyproject.toml  python-notes.py  query_ddb.py  readings.csv  readings_for_upload.csv  requirements.txt  results.csv  scaler.pkl  temper.py  test.py  test_output.txt
analysis/: 0. Dealing with missing data.ipynb  1. Data exploration.ipynb  2. Data exploration.ipynb  2. First LSTM model.ipynb  2. LSTM and node experiments.ipynb  3. First LSTM and dropout experiments.ipynb  3. Reducing LSTM overfit .ipynb  3. Reducing LSTM overfit.ipynb  4. Reduce overfit - manual.ipynb  5. Dealing with missing data.ipynb  5. Keras tuner.ipynb  Summary.md  analysis.ipynb  charts.ipynb  ddb_output.csv  dropout_experiments.pkl  historic_readings_no_missing_data.csv  lstm_node_experiments.pkl  model_checkpoint.h5  model_checkpoint_early_stopping.h5  model_checkpoint_early_stopping_recurrent_dropout.h5  regularised_lstm.keras  results_2.csv
articles/: gradient_steepest_descent.md  linear_algebra_for_ML_google.md
environment/: Dockerfile  application.py
(+172 files in other folders)
