[tool.poetry]
name = "raspi-weather-station"
version = "0.1.0"
description = "A service for collecting and training a temperature model"
authors = ["bendixonbbc <123097722+bendixonbbc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pytest = "^7.4.3"
numpy = "^1.26.2"
pandas = "^2.1.3"
tensorflow = "2.14.0"
scikit-learn = "^1.3.2"
pydocstyle = "^6.3.0"
pre-commit = "^3.5.0"
boto3 = "^1.34.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
